welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:9: error: ']' expected but ':' found.
  var T = new Array[c:Color](x)
                     ^